# async-benchmark

./: .gitignore  Makefile  analysis.ipynb  compile.py  go.work  run-win.py  run.py
csharp/: MpscChannel.cs  README.md
csharp/channel/: MpscChannel.cs
csharp/channel-mpmc/: MpmcChannel.cs  channel-mpmc.csproj
fsharp/: README.md
fsharp/channel/: channel.fsx
fsharp/channel-mpmc/: channel-mpmc.fsx
go/: .gitignore  Makefile  go.mod  main.go
go/channel/: .gitignore  Makefile  go.mod  main.go
go/channel-mpmc/: .gitignore  Makefile  go.mod  main.go
go/mutex/: .gitignore  Makefile  go.mod  main.go
haskell/: Makefile  README.md
haskell/Channel/: CHANGELOG.md  Channel.cabal  Makefile  package.yaml
haskell/Channel/app/: Main.hs
haskell/ChannelMpmc/: CHANGELOG.md  ChannelMpmc.cabal  Makefile  README.md  package.yaml
haskell/ChannelMpmc/app/: Main.hs
julia/: README.md
julia/channel/: channel.jl
julia/channel-mpmc/: channel-mpmc.jl
kotlin/: pom.xml
lean4/: README.md
lean4/channel/: channel.lean
lean4/channel-mpmc/: channel-mpmc.lean
ocaml/: Makefile  README.md
ocaml/Channel/: Makefile  dune-project
ocaml/Channel/lib/: dune
ocaml/Channel/test/: dune
ocaml/ChannelMpmc/: Makefile  dune-project
ocaml/ChannelMpmc/lib/: dune
ocaml/_build/: log
python/: README.md
python/channel/: channel.py
python/channel-mpmc/: channel-mpmc.py
rust/: Cargo.toml  Makefile
rust/channel/: Cargo.toml  Makefile
rust/channel-mpmc/: Cargo.toml  Makefile
rust/channel-mpmc/src/: main.rs
rust/channel/src/: main.rs
rust/mutex/: Cargo.toml  Makefile
rust/mutex/src/: main.rs
rust/src/: main.rs
swift/: README.md
swift/channel-mpmc/: channel-mpmc.swift
(+3 files in other folders)
