[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-io = "1.13.0"
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.2.7", features = ["derive"] }
futures = "0.3.28"
smol = "1.3.0"
tokio = { version = "1.28.1", features = ["full"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
