[package]
name = "channel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-io = "1.13.0"
smol = "1.3.0"
clap = { version = "4.2.7", features = ["derive"] }


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
